# strsv

./: .clang-format  .gitignore  CMakeLists.txt  README.md  make_plots.py  vcpkg.json
.github/workflows/: test.yml
cmake/: FindMKL.cmake
overlay/openblas/: portfile.cmake
src/: CMakeLists.txt  solvers.h
src/solvers/: CMakeLists.txt  blocked.cpp  blocked.h  dnc.cpp  dnc.h  mkl_solver.cpp  mkl_solver.h  naive.cpp  naive.h  openblas_solver.cpp  openblas_solver.h
tests/: CMakeLists.txt  common.cpp  common.h
tests/correctness/: CMakeLists.txt  mkl.cpp  noblas.cpp  openblas.cpp
tests/performance/: CMakeLists.txt  mkl.cpp  noblas.cpp  openblas.cpp
